--- a/index.css
+++ b/index.css
@@ -22,12 +22,14 @@
 h2 {
     text-align: center;
     font-family: sans-serif;
+    color: white;
 }
 
 h5 {
     text-align: center;
     font-family: sans-serif;
     margin-top:0em;
+    color: white;
 }
 
 .row,
