--- a/index.css
+++ b/index.css
@@ -22,14 +22,14 @@
 h2 {
     text-align: center;
     font-family: sans-serif;
-    color: white;
+    color: black;
 }
 
 h5 {
     text-align: center;
     font-family: sans-serif;
     margin-top:0em;
-    color: white;
+    color: black;
 }
 
 .row,
