--- a/index.css
+++ b/index.css
@@ -52,7 +52,7 @@ img {
 }
 
 body {
-    background:black;
+    background:white;
 }
 
 @media (min-width:30em) {
@@ -73,7 +73,7 @@ body {
 }
 
     body {
-        background:black;
+        background:white;
     }
     .column,
     .columns {
